--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2021"
 [dependencies]
 ansi_term = "0.12.1"
 clap = { version = "4.4.10", features = ["derive"] }
-reqwest = {version="0.11.22",features=["blocking","json"]}
+reqwest = {version="0.11.22",features=["blocking","json","cookies"]}
