--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 ansi_term = "0.12.1"
 clap = { version = "4.4.10", features = ["derive"] }
 reqwest = {version="0.11.22",features=["blocking","json","cookies"]}
+aoc2023 = { git = "https://github.com/jamespettigrew/advent_of_code_2023", branch = "main"}
