update template, day2 complete

--- a/src/days/day0.rs.template
+++ b/src/days/day0.rs.template
@@ -4,23 +4,23 @@ pub const DAY0: Problem = Problem {
     day: 0,
     part1,
     part2,
-    test_data,
+    test_data: Some(test_data),
 };
 struct Day0Data {
     data: Vec<i32>,
 }
 
-pub fn part1(lines: Vec<String>) -> String {
+pub fn part1(lines: &Vec<String>) -> String {
     // let data = import(lines);
     "".to_owned()
 }
 
-pub fn part2(lines: Vec<String>) -> String {
+pub fn part2(lines: &Vec<String>) -> String {
     // let data = import(lines);
     "".to_owned()
 }
-pub fn test_data() -> Option<Vec<String>> {
-    None
+pub fn test_data() -> String {
+    "".to_owned()
 }
 
 fn import(lines: Vec<String>) -> Day0Data {
