--- a/src/days/day0.rs.template
+++ b/src/days/day0.rs.template
@@ -23,7 +23,7 @@ pub fn test_data() -> String {
     "".to_owned()
 }
 
-fn import(lines: Vec<String>) -> Day0Data {
+fn import(lines: &Vec<String>) -> Day0Data {
     //probably not needed half the time
     Day0Data {
         data: lines.iter().map(|x| x.trim().parse().unwrap()).collect(),
