idk this is disgusting and it doesn't work

--- a/src/days/day0.rs.template
+++ b/src/days/day0.rs.template
@@ -11,12 +11,12 @@ struct Day0Data {
 }
 
 pub fn part1(lines: &Vec<String>) -> String {
-    // let data = import(lines);
+    let _ = import(lines);
     "".to_owned()
 }
 
 pub fn part2(lines: &Vec<String>) -> String {
-    // let data = import(lines);
+    let _ = import(lines);
     "".to_owned()
 }
 pub fn test_data() -> &'static str {
